--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
- <header>Here you can find your favorite authors' books ! Enjoy ^_^ !</header>
+ <header>Here you can find your favorite books ! Enjoy ^_^ !</header>
  <div class="search-div">
     <label for="user-input" style="font-size: 1.2em; font-weight: bold;">Find your favorite author: </label>
     <input type="text" id="user-input">
